syntax = "proto3";

option go_package = ".;couchcampaign";
package couchcampaign;

enum SessionState {
  LOBBY = 0;
  RUNNING = 1;
}

message Message {
  oneof content {
    GameState game_state = 1;
    SessionState session_state = 2;
  }
}

message GameInfo { string id = 1; }

message GameState {
  string leader = 1;
  int32 health = 2;
  int32 wealth = 3;
  int32 stability = 4;

  oneof card {
    ActionCard action_card = 5;
    InfoCard info_card = 6;
    VotingCard voting_card = 7;
  }
}

message ActionCard {
  string content = 1;
  string advisor = 2;
  string acceptText = 3;
  string rejectText = 4;
}

message InfoCard { string text = 1; }

message VotingCard { string text = 1; }

message CreateGameRequest {}

message CreateGameResponse { string game_url = 1; }

message JoinGameRequest { string game_id = 1; }

message JoinGameResponse { string game_url = 1; }

message ListGamesRequest {}

message ListGamesResponse { repeated GameInfo games = 1; }